nx-libs (2:3.5.0.6-0) UNRELEASED; urgency=low

  * Add patch: 202_nx-x11_enable-xinerama.patch.
  * Fix lintian issue: missing-separator-between-items for x2goagent package.
    Drop dependency on libnx-x11 as we already depend on nxagent and fix
    description synopsis of x2goagent package.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Fri, 13 Jan 2012 10:28:49 +0100

nx-libs (2:3.5.0.5-0) unstable; urgency=low

  * Fix wrapper script patches for nxagent, x2goagent, nxauth, nxproxy.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Fri, 13 Jan 2012 00:37:21 +0100

nx-libs (2:3.5.0.4-0) unstable; urgency=low

  * Update/fix patch: 999_nxagent_unbrand-nxagent-brand-x2goagent.patch.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Thu, 12 Jan 2012 23:04:37 +0100

nx-libs (2:3.5.0.3-0) unstable; urgency=low

  * Rename nxagent-unbrand patch, so that is the last patch to be applied
    (999_<patchname>).
  * Drop NX agent unbrand patch from FreeNX.
  * Add X2Go agent / NX agent flavouring via patch system:
    - 200_nxagent_check-binary-x2go-flavour.patch
    - 201_nxagent_set-x2go-icon-if-x2goagent-flavour.patch
    - 300_nxagent_set-wm-class.patch
    - 999_nxagent_unbrand-nxagent-brand-x2goagent.patch
  * Add patch: 023_add-x2goagent-wrapper.patch.
  * Add patch: 209_x2goagent-add-man-page.patch.
  * Add binary package: x2goagent, includes man page
    patch: 209_x2goagent-add-man-page.patch
  * Modify patch: 101_nxagent_set-rgb-path.patch, add path to RGB file
    if NX (redistributed) is installed via tarball under /usr/local.
  * Provide patches that are tarball / distro aware. Either NX (redistributed)
    has been installed to /usr/local/lib/nx via tarball or it has been
    packaged for a distribution and is installed to /usr/lib/nx. Other
    installation paths are currently not supported.
  * Fix RGB color pallette (gray X2GO logo to be more accurate) for agent
    splash screen.
